# mingo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
doc/: header-configuration.txt
doc/database/: er-model.drawio
doc/demo/: demo-2.ipynb  demo.ipynb
doc/header-files/: hans-format.txt  header-format.txt  my-format.txt  original-format.txt
src/mingo/: __init__.py  analysis.py  database.py  errors.py  utils.py
src/mingo/tests/: mock_data.py  test_api.py  test_database.py  test_utils.py
