[metadata]
name = mingo
version = 1.0.0
author = Alfonso Sánchez Rodríguez
author_email = alfonso.sr.trabajo@gmail.com
description = Data analysis utilities for the Mingo project
long_description = file:README.md
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = =src
python_requires = >=3.11
install_requires =
    cryptography>=39.0.2
    SQLAlchemy>=2.0.6
    SQLAlchemy_utils>=0.40.0
    mariadb>=1.1.6
    mysql>=0.0.3
    numpy>=1.24.3
    matplotlib>=3.7.1
    pandas>=2.0.2
zip_safe = no

[options.packages.find]
where = src

[options.package_data]
mingo = py.typed

[options.extras_require]
testing =
    pytest>=7.2.2
    mypy>=1.1.1
    flake8>=6.0.0
    autopep8>=2.0.2
